--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/blur": "^3.6.0",
     "expo": "~42.0.1",
+    "expo-blur": "~9.0.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
