--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-scalable-image": "^1.1.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
