--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-scalable-image": "^1.1.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-web-swiper": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
