--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-scalable-image": "^1.1.0",
+    "react-native-shared-element": "^0.8.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12",
     "react-native-web-swiper": "^2.2.1"
