--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "dependencies": {
     "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^5.14.9",
     "expo": "~42.0.1",
     "expo-blur": "~9.0.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~3.4.0",
@@ -25,7 +30,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12",
     "react-native-web-swiper": "^2.2.1",
-    "react-navigation-shared-element": "^3.1.2",
+    "react-navigation-shared-element": "^5.0.0-alpha1",
+    "react-navigation-stack": "^2.10.4",
     "yarn": "^1.22.11"
   },
   "devDependencies": {
