--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12",
     "react-native-web-swiper": "^2.2.1",
+    "react-navigation": "^4.4.4",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-navigation-stack": "^2.10.4",
     "yarn": "^1.22.11"
